--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "프론트엔드 개발을 위한 웹팩 설정",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/jelly-garden/webpack_test/issues"
   },
-  "homepage": "https://github.com/jelly-garden/webpack_test#readme"
+  "homepage": "https://github.com/jelly-garden/webpack_test#readme",
+  "devDependencies": {
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
+  }
 }
