--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "프론트엔드 개발을 위한 웹팩 설정",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "start": "webpack serve --open --mode=development",
+    "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.71.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
